--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.6.0
 asgiref==3.7.2
 async-timeout==4.0.3
+attrs==23.2.0
 backports.zoneinfo==0.2.1
 black==24.2.0
 certifi==2024.2.2
@@ -19,11 +20,15 @@ Faker==23.3.0
 filelock==3.13.1
 identify==2.5.35
 idna==3.6
+importlib-resources==6.1.3
 isort==5.13.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 mypy-extensions==1.0.0
 nodeenv==1.8.0
 packaging==23.2
 pathspec==0.12.1
+pkgutil-resolve-name==1.3.10
 platformdirs==4.2.0
 pre-commit==3.5.0
 psycopg2-binary==2.9.9
@@ -34,7 +39,9 @@ python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.2
+referencing==0.33.0
 requests==2.31.0
+rpds-py==0.18.0
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
@@ -42,3 +49,4 @@ typing-extensions==4.10.0
 urllib3==2.2.1
 virtualenv==20.25.1
 whitenoise==6.6.0
+zipp==3.17.0
