--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ Publish Docker Build:
     - echo $DOCKER_PASSWORD | docker login -u $REGISTRY_USER --password-stdin docker.io
   script:
     - ls
-    - docker build --build-arg SECRET_KEY=$SECRET_KEY --build-arg ENVIRONMENT=$ENVIRONMENT --build-arg DATABASE_PROD_NAME=$DATABASE_PROD_NAME --build-arg DATABASE_PROD_PASSWORD=$DATABASE_PROD_PASSWORD --build-arg DATABASE_PROD_HOST=$DATABASE_PROD_HOST --build-arg DATABASE_PROD_USERNAME=$DATABASE_PROD_USERNAME -t $REGISTRY_USER/$IMAGE_NAME_PROD:latest .
+    - docker build --build-arg SECRET_KEY=$SECRET_KEY --build-arg ENVIRONMENT=$ENVIRONMENT --build-arg DJANGO_SETTINGS_MODULE=$DJANGO_SETTINGS_MODULE --build-arg DATABASE_PROD_NAME=$DATABASE_PROD_NAME --build-arg DATABASE_PROD_PASSWORD=$DATABASE_PROD_PASSWORD --build-arg DATABASE_PROD_HOST=$DATABASE_PROD_HOST --build-arg DATABASE_PROD_USERNAME=$DATABASE_PROD_USERNAME -t $REGISTRY_USER/$IMAGE_NAME_PROD:latest .
     - docker push $REGISTRY_USER/$IMAGE_NAME_PROD:latest
   only:
     - main
